# hair

./: CMakeLists.txt  README.md
content/hair/: hair_01.abc  hair_02.abc
content/shader/: hair_dom_shadow.frag  hair_shader_defs.glsl  hair_shading.frag  hair_shading.vert  hair_sim_initialize.comp  hair_sim_solver.comp  solver_constraints.glsl
src/: camera.h  global_defines.h  hair_asset.cpp  hair_asset.h  hair_importer.cpp  hair_importer.h  hair_instance.cpp  hair_instance.h  main.cpp  renderer.cpp  renderer.h  shading_pass.cpp  shading_pass.h  simulation_pass.cpp  simulation_pass.h
